--- a/ProductsService/src/main/resources/application.yml
+++ b/ProductsService/src/main/resources/application.yml
@@ -3,9 +3,11 @@ spring:
     name: products
 
 server:
-  port: 8080
+  port: 0
 
 eureka:
   client:
     service-url:
       defaultZone: http://localhost:8761/eureka
+  instance:
+    instance-id: ${spring.application.name}:${instanceId:${random.value}}
