--- a/ProductsService/pom.xml
+++ b/ProductsService/pom.xml
@@ -23,6 +23,7 @@
 		<java.version>17</java.version>
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 		<spring-cloud.eureka.client.version>3.1.3</spring-cloud.eureka.client.version>
+		<axon.server.version>4.5.10</axon.server.version>
 	</properties>
 
 	<dependencies>
@@ -35,6 +36,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-eureka-client</artifactId>
 			<version>${spring-cloud.eureka.client.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>org.axonframework</groupId>
+			<artifactId>axon-spring-boot-starter</artifactId>
+			<version>${axon.server.version}</version>
 		</dependency>
 
 		<dependency>
