--- a/ProductsService/pom.xml
+++ b/ProductsService/pom.xml
@@ -24,6 +24,7 @@
 		<spring-cloud.version>2021.0.3</spring-cloud.version>
 		<spring-cloud.eureka.client.version>3.1.3</spring-cloud.eureka.client.version>
 		<axon.server.version>4.5.10</axon.server.version>
+		<google.guava.version>31.1-jre</google.guava.version>
 	</properties>
 
 	<dependencies>
@@ -42,6 +43,12 @@
 			<groupId>org.axonframework</groupId>
 			<artifactId>axon-spring-boot-starter</artifactId>
 			<version>${axon.server.version}</version>
+		</dependency>
+
+		<dependency>
+			<groupId>com.google.guava</groupId>
+			<artifactId>guava</artifactId>
+			<version>${google.guava.version}</version>
 		</dependency>
 
 		<dependency>
