--- a/ProductsService/pom.xml
+++ b/ProductsService/pom.xml
@@ -25,12 +25,25 @@
 		<spring-cloud.eureka.client.version>3.1.3</spring-cloud.eureka.client.version>
 		<axon.server.version>4.5.10</axon.server.version>
 		<google.guava.version>31.1-jre</google.guava.version>
+		<h2.database.version>2.1.214</h2.database.version>
 	</properties>
 
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-data-jpa</artifactId>
+		</dependency>
+
+		<dependency>
+			<groupId>com.h2database</groupId>
+			<artifactId>h2</artifactId>
+			<version>${h2.database.version}</version>
+			<scope>runtime</scope>
 		</dependency>
 
 		<dependency>
