--- a/ProductsService/src/main/resources/application.yml
+++ b/ProductsService/src/main/resources/application.yml
@@ -1,6 +1,18 @@
 spring:
   application:
     name: products
+  datasource:
+    url: jdbc:h2:file:~/products;AUTO_SERVER=true
+    username: sa
+    password:
+    driver-class-name: org.h2.Driver
+  jpa:
+    database-platform: org.hibernate.dialect.H2Dialect
+    hibernate:
+      ddl-auto: update
+  h2:
+    console:
+      enabled: true
 
 server:
   port: 0
