--- a/ProductsService/src/main/resources/application.yml
+++ b/ProductsService/src/main/resources/application.yml
@@ -1,6 +1,6 @@
 spring:
   application:
-    name: products
+    name: products-service
   datasource:
     url: jdbc:h2:file:~/products;AUTO_SERVER=true
     username: sa
