--- a/ProductsService/src/main/resources/application.yml
+++ b/ProductsService/src/main/resources/application.yml
@@ -26,3 +26,9 @@ eureka:
       defaultZone: http://localhost:8761/eureka
   instance:
     instance-id: ${spring.application.name}:${instanceId:${random.value}}
+
+axon:
+  eventhandling:
+    processors:
+      product-group:
+        mode: subscribing
